# amplifier-distro

./: .env.test  .gitignore  BADGES.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  IMPLEMENTATION.md  INSTRUCTIONS.md  ONE-CLICK-INSTALL.md  OPINIONS.md  README.md  ROADMAP.md  TASKS.md  TEST-RESULTS.md  docker-compose.yml  install-windows.ps1  install.html  install.sh  pyproject.toml
.amplifier/: AGENTS.md
.devcontainer/: devcontainer.json  setup.sh  start-tui.sh
context/: DISTRO-PROJECT-CONTEXT.md  OVERNIGHT-BUILD-RESUME.md  OVERNIGHT-BUILD-STATUS.md  OVERNIGHT-BUILD.md  SLACK-BRIDGE-CONTEXT.md
docs/: SLACK_SETUP.md
docs/plans/: 2026-02-17-surface-session-registry.md  2026-02-17-transcript-persistence.md  2026-02-18-fix-thread-routing-issue-54.md  2026-02-18-fix-zombie-sessions-and-test-gaps.md  2026-02-18-session-cwd-persistence.md  2026-02-18-slack-session-working-dir.md  2026-02-19-server-concurrency.md  2026-02-19-web-chat-resume-llm-context.md  2026-02-19-web-chat-session-list.md
notes/: 2026-02-06-workflow-techniques.md
planning/: 00-research-index.md  01-friction-analysis.md  02-current-landscape.md  03-architecture-vision.md  04-pieces-and-priorities.md  05-self-improving-loop.md  06-anthropic-patterns.md  07-ring1-deep-dive.md  08-ring2-deep-dive.md  09-setup-tool.md  10-project-structure.md  11-task-list.md  12-nexus-synthesis.md  13-agent-shaped-os.md  contents.md  install.sh  research-anthropic-compiler.md
responses/: bundle-drift.md  distro-one-pager.md  going-forward.md
scripts/: amplifier-distro.service  docker-entrypoint.sh  install-service.sh  install.sh  start-dev.bat  start-dev.sh  stop-dev.bat  stop-dev.sh
specs/: distro-004-bundle-structure.md  watchdog-and-service-spec.md
src/amplifier_distro/: __init__.py  backup.py  bridge.py  bridge_protocols.py  bundle_composer.py  cli.py  config.py  conventions.py  deploy.py  docs_config.py  doctor.py  features.py  fileutil.py  migrate.py  preflight.py  provider_api.py  schema.py  service.py  tailscale.py  transcript_persistence.py  update_check.py
src/amplifier_distro/server/: __init__.py  __main__.py  app.py  cli.py  daemon.py  memory.py  services.py  session_backend.py  startup.py  stub.py  surface_registry.py  watchdog.py
src/amplifier_distro/server/apps/: __init__.py
src/amplifier_distro/server/apps/email/: __init__.py  client.py  commands.py  config.py  events.py  formatter.py  models.py  poller.py  sessions.py  setup.py
src/amplifier_distro/server/apps/example/: __init__.py
src/amplifier_distro/server/apps/install_wizard/: __init__.py
src/amplifier_distro/server/apps/install_wizard/static/: quickstart.html  settings.html  wizard.html
src/amplifier_distro/server/apps/routines/: __init__.py
src/amplifier_distro/server/apps/settings/: __init__.py
src/amplifier_distro/server/apps/settings/static/: settings.html
src/amplifier_distro/server/apps/slack/: __init__.py  backend.py  client.py  commands.py  config.py  discovery.py  events.py  formatter.py  models.py  sessions.py  setup.py  simulator.py  socket_mode.py
src/amplifier_distro/server/apps/slack/static/: simulator.html  slack-setup.html
src/amplifier_distro/server/apps/voice/: __init__.py  voice.html
src/amplifier_distro/server/apps/web_chat/: __init__.py  session_store.py
src/amplifier_distro/server/apps/web_chat/static/: index.html
src/amplifier_distro/server/static/: index.html  quickstart.html  settings.html  slack-setup.html
src/bundles/: distro-base.md
tests/: conftest.py  test_backup.py  test_bridge.py  test_bridge_resume.py  test_bundle_composer.py  test_cli_enhancements.py  test_conventions.py  test_daemon.py  test_deploy.py  test_docs_config.py  test_doctor.py  test_email_bridge.py  test_features.py  test_fileutil.py  test_install.py  test_install_wizard.py  test_memory.py  test_phase0.py  test_phase1.py  test_provider_api.py  test_scheduler.py  test_server.py  test_server_static.py  test_service.py  test_services.py  test_session_backend.py  test_session_info.py  test_settings_api.py  test_slack_bridge.py  test_socket_mode.py  test_surface_registry.py  test_tailscale.py  test_transcript_persistence.py  test_voice.py  test_watchdog.py  test_web_chat.py  test_web_chat_store.py
